@@ -131,3 +131,6 @@
 
 -- 0.2.5
 * has_one bugfixes
+* Added syntax for setting CHECK-constraints directly in your properties (Postgres)
+* You can now set indexes with :index => true and :index => :unique, or add_index(*args) for composite indexes
+
